// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination Snapshot matches first page snapshot 1`] = `
<div>
  <script
    nonce=""
  >
    ((e,s,n,m,o,l,u,h)=&gt;{let a=document.documentElement,v=["light","dark"];function p(c){(Array.isArray(e)?e:[e]).forEach(y=&gt;{let k=y==="class",S=k&&l?o.map(f=&gt;l[f]||f):o;k?(a.classList.remove(...S),a.classList.add(c)):a.setAttribute(y,c)}),C(c)}function C(c){h&&v.includes(c)&&(a.style.colorScheme=c)}function d(){return window.matchMedia("(prefers-color-scheme: dark)").matches?"dark":"light"}if(m)p(m);else try{let c=localStorage.getItem(s)||n,y=u&&c==="system"?d():c;p(y)}catch(c){}})("class","theme","system",null,["light","dark"],null,true,true)
  </script>
  <div
    class="css-1ol6vbp"
  >
    <p
      class="css-v0otzr"
    >
      Página
      <span
        class="css-13kjmj8"
      >
        1
      </span>
      de
      <span
        class="css-13kjmj8"
      >
        3
      </span>
    </p>
    <div
      class="css-1chbm4z"
    >
      <button
        class="chakra-button css-1tv1hin"
        disabled=""
        type="button"
      >
        <svg
          class="lucide lucide-chevron-left"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15 18-6-6 6-6"
          />
        </svg>
      </button>
      <div
        class="css-11ae5ff"
      >
        <button
          class="chakra-button css-1ps8y1l"
          type="button"
        >
          1
        </button>
        <button
          class="chakra-button css-132mmm0"
          type="button"
        >
          2
        </button>
        <button
          class="chakra-button css-132mmm0"
          type="button"
        >
          3
        </button>
      </div>
      <button
        class="chakra-button css-1tv1hin"
        type="button"
      >
        <svg
          class="lucide lucide-chevron-right"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Pagination Snapshot matches last page snapshot 1`] = `
<div>
  <script
    nonce=""
  >
    ((e,s,n,m,o,l,u,h)=&gt;{let a=document.documentElement,v=["light","dark"];function p(c){(Array.isArray(e)?e:[e]).forEach(y=&gt;{let k=y==="class",S=k&&l?o.map(f=&gt;l[f]||f):o;k?(a.classList.remove(...S),a.classList.add(c)):a.setAttribute(y,c)}),C(c)}function C(c){h&&v.includes(c)&&(a.style.colorScheme=c)}function d(){return window.matchMedia("(prefers-color-scheme: dark)").matches?"dark":"light"}if(m)p(m);else try{let c=localStorage.getItem(s)||n,y=u&&c==="system"?d():c;p(y)}catch(c){}})("class","theme","system",null,["light","dark"],null,true,true)
  </script>
  <div
    class="css-1ol6vbp"
  >
    <p
      class="css-v0otzr"
    >
      Página
      <span
        class="css-13kjmj8"
      >
        3
      </span>
      de
      <span
        class="css-13kjmj8"
      >
        3
      </span>
    </p>
    <div
      class="css-1chbm4z"
    >
      <button
        class="chakra-button css-1tv1hin"
        type="button"
      >
        <svg
          class="lucide lucide-chevron-left"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15 18-6-6 6-6"
          />
        </svg>
      </button>
      <div
        class="css-11ae5ff"
      >
        <button
          class="chakra-button css-132mmm0"
          type="button"
        >
          1
        </button>
        <button
          class="chakra-button css-132mmm0"
          type="button"
        >
          2
        </button>
        <button
          class="chakra-button css-1ps8y1l"
          type="button"
        >
          3
        </button>
      </div>
      <button
        class="chakra-button css-1tv1hin"
        disabled=""
        type="button"
      >
        <svg
          class="lucide lucide-chevron-right"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Pagination Snapshot renders correctly 1`] = `
<div>
  <script
    nonce=""
  >
    ((e,s,n,m,o,l,u,h)=&gt;{let a=document.documentElement,v=["light","dark"];function p(c){(Array.isArray(e)?e:[e]).forEach(y=&gt;{let k=y==="class",S=k&&l?o.map(f=&gt;l[f]||f):o;k?(a.classList.remove(...S),a.classList.add(c)):a.setAttribute(y,c)}),C(c)}function C(c){h&&v.includes(c)&&(a.style.colorScheme=c)}function d(){return window.matchMedia("(prefers-color-scheme: dark)").matches?"dark":"light"}if(m)p(m);else try{let c=localStorage.getItem(s)||n,y=u&&c==="system"?d():c;p(y)}catch(c){}})("class","theme","system",null,["light","dark"],null,true,true)
  </script>
  <div
    class="css-1ol6vbp"
  >
    <p
      class="css-v0otzr"
    >
      Página
      <span
        class="css-13kjmj8"
      >
        2
      </span>
      de
      <span
        class="css-13kjmj8"
      >
        5
      </span>
    </p>
    <div
      class="css-1chbm4z"
    >
      <button
        class="chakra-button css-1tv1hin"
        type="button"
      >
        <svg
          class="lucide lucide-chevron-left"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15 18-6-6 6-6"
          />
        </svg>
      </button>
      <div
        class="css-11ae5ff"
      >
        <button
          class="chakra-button css-132mmm0"
          type="button"
        >
          1
        </button>
        <button
          class="chakra-button css-1ps8y1l"
          type="button"
        >
          2
        </button>
        <button
          class="chakra-button css-132mmm0"
          type="button"
        >
          3
        </button>
        <button
          class="chakra-button css-132mmm0"
          type="button"
        >
          4
        </button>
        <button
          class="chakra-button css-132mmm0"
          type="button"
        >
          5
        </button>
      </div>
      <button
        class="chakra-button css-1tv1hin"
        type="button"
      >
        <svg
          class="lucide lucide-chevron-right"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
